feat: add activity_01

--- a/activity_01/Makefile
+++ b/activity_01/Makefile
@@ -15,11 +15,25 @@
 #  You should have received a copy of the GNU General Public License
 #  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-bootloader.bin : %.bin : %.o
-	ld -melf_i386 --oformat=binary -e begin -Ttext=0x7c00  $< -o $@
+AUXDIR =tools#
 
-bootloader.o : %.o : %.S
-	as --32 $< -o $@
+all: hw-hex.bin hw-s.bin hw-c.bin
+
+hw-hex.bin: hw.hex
+	$(AUXDIR)/hex2bin $< $@ 
+
+hw-s.bin: hw.S
+	as --32 $< -o hw-s.o
+	ld -melf_i386 --oformat=binary -e begin -Ttext=0x7c00  hw-s.o -o $@
+
+hw-c.bin: hw.c stdio.h 
+	gcc -m16 -O0 -I. -Wall -fno-pic -fcf-protection=none  --freestanding -S $< -o hw-c.s
+	gcc -m16 -O0 -I. -Wall -fno-pic -fcf-protection=none --freestanding -S hw-c_utils.c -o hw-c_utils.s
+	gcc -m16 -O0 -I. -Wall -fno-pic  -fcf-protection=none -S hw-c_rt0.c -o hw-c_rt0.s
+	as --32 hw-c.s -o hw-c.o
+	as --32 hw-c_utils.s -o hw-c_utils.o
+	as --32 hw-c_rt0.s -o hw-c_rt0.o
+	ld -melf_i386 -T hw-c.ld --orphan-handling=discard  hw-c.o hw-c_utils.o hw-c_rt0.o -o $@
 
 # Run on the emulator
 %/run : %
@@ -28,4 +42,4 @@ bootloader.o : %.o : %.S
 .PHONY: clean
 
 clean:
-	rm -f *.bin *.o
+	rm -rf *.bin *.o hex2bin hw-c*.s
